--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ layout: default
 {{ site.name }}
 
 
-{% capture VAR %}
-	{% include_relative _posts/EXAMPLE.md %}
-{% endcapture %}
+<!--{% capture VAR %}-->
+<!--	{% include_relative _posts/EXAMPLE.md %}-->
+<!--{% endcapture %}-->
 
-{{ VAR | markdownify }}
+<!--{{ VAR | markdownify }}-->
 
