--- a/index.html
+++ b/index.html
@@ -2,4 +2,22 @@
 layout: default
 ---
 
+	{% capture intro %}
+	    {% include_relative _posts/2015-01-01-intro.md %}
+	{% endcapture %} 
+	    {{ intro | markdownify }}	
 
+	{% capture portfolio %}
+	    {% include_relative _posts/2015-01-02-portfolio.md %}
+	{% endcapture %} 
+	    {{ portfolio | markdownify }}
+	  
+	{% capture about %}
+	    {% include_relative _posts/2015-01-03-aboutme.md %}
+	{% endcapture %} 
+	    {{ about | markdownify }}
+	
+	{% capture contact %}
+	    {% include_relative _posts/2015-01-04-contact.md %}
+	{% endcapture %} 
+	    {{ contact | markdownify }}
