--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 layout: default
 ---
 
-	{% capture intro %}
-	    {% include_relative _posts/2015-01-01-intro.md %}
-	{% endcapture %} 
-	    {{ intro | markdownify }}	
+<!--I know these are SUPOSSED to go here, but i cannot figure out how to get them styled properly-->
+	<!--{% capture intro %}-->
+	<!--    {% include_relative _posts/2015-01-01-intro.md %}-->
+	<!--{% endcapture %} -->
+	<!--    {{ intro | markdownify }}	-->
 
-	{% capture portfolio %}
-	    {% include_relative _posts/2015-01-02-portfolio.md %}
-	{% endcapture %} 
-	    {{ portfolio | markdownify }}
+	<!--{% capture portfolio %}-->
+	<!--    {% include_relative _posts/2015-01-02-portfolio.md %}-->
+	<!--{% endcapture %} -->
+	<!--    {{ portfolio | markdownify }}-->
 	  
-	{% capture about %}
-	    {% include_relative _posts/2015-01-03-aboutme.md %}
-	{% endcapture %} 
-	    {{ about | markdownify }}
+	<!--{% capture about %}-->
+	<!--    {% include_relative _posts/2015-01-03-aboutme.md %}-->
+	<!--{% endcapture %} -->
+	<!--    {{ about | markdownify }}-->
 	
